--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header>
-                <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
                   <a class="navbar-brand" href="#"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
