--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -74,7 +74,10 @@
     <h3>Почта</h3>
    <a href="mailto:yacov9988@bk.ru"> <h4 class="white">yacov9988@bk.ru</h4></a>
   </article>
-  
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   
   <!-- подключаем Jquery -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
