--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -41,7 +41,8 @@
       <div class="conteiner">
             <div class="portfolio-slider">
                 <div class="portfolio-block">
-                    <div class="portfolio-img"><img src="/progect_for_portfolio/img/dev.png" alt="Скрин верстки "></div>
+                    <div class="portfolio-img"><p><a href="https://iakovkoshkin.github.io/3-home_work/html/index.html"><img src="/progect_for_portfolio/img/dev.png" 
+   alt="Пример"></a></p>
                     <h3  class="portfolio-header">Тренировочная верстка </h3>
                     <p>Адаптивная страница собранная из макета Figma</p>
                 </div>
