--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -11,25 +11,10 @@
 <body>
         <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="navbar-brand" href="#"><h3>Визитка</h3></a>
-                  <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="/progect_for_portfolio/html/index.html"><h3>Главная</h3> <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#Портфолио"><h3>Портфолио</h3></a>
-                      </li>
-                      <li class="nav-item">
-                            <a class="nav-link" href="#Контакты"><h3>Контакты</h3></a>
-                        </li>
-                    </ul>
-                  </div>
+                  <a class="navbar-brand nav_text" href="#"><p class="brand">Cайт визитка</p><br><p class="my_name">Кошкин Яков</p></a>
+                  <a class="navbar" href="#Контакты"><h3>КОНТАКТЫ</h3></a>   
                 </nav>
-              </header>
+         </header>
   <section class="main_page">
     <h1 class="main_page__title">frontend разработчик,<br>верстальщик</h1>
 
@@ -75,10 +60,7 @@
     <h3>Почта</h3>
    <a href="mailto:yacov9988@bk.ru"> <h4 class="white">yacov9988@bk.ru</h4></a>
   </article>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+  
   
   <!-- подключаем Jquery -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
