--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Page Title</title>
+  <title>Визитка Кошкин Яков</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/progect_for_portfolio/css/style.css">
   <link rel="stylesheet" href="/progect_for_portfolio/less/main.css">
