--- a/progect_for_portfolio/html/index.html
+++ b/progect_for_portfolio/html/index.html
@@ -36,7 +36,7 @@
                     <p>Адаптивная страница собранная из макета Figma</p>
                 </div>
                 <div class="portfolio-block">
-                    <div class="portfolio-img"><img src="/progect_for_portfolio/img/coming_soon.png" alt="Уже скоро"></div>
+                    <div class="portfolio-img"><a href="sample.html"><img src="/progect_for_portfolio/img/coming_soon.png" alt="Уже скоро"></a></div>
                     <h3 class="portfolio-header">Уже скоро</h3>
                     <p></p>
                 </div>
